@@ -69,6 +69,9 @@ div#navigation table {
 <div class="ulist">
 <ul>
 <li>
+<p>Removed invalid <code>#</code>. #336</p>
+</li>
+<li>
 <p>Refined documents. #335</p>
 </li>
 <li>
