@@ -1,4 +1,4 @@
-#// Copyright Takatoshi Kondo 2024
+// Copyright Takatoshi Kondo 2024
 //
 // Distributed under the Boost Software License, Version 1.0.
 // (See accompanying file LICENSE_1_0.txt or copy at
